# XV6-OS

./: .gdb_history  .gitignore  CMakeLists.txt  Makefile  defs.h  poweroff.c  proc.c  proc.h  syscall.c  syscall.h  sysproc.c  user.h  usys.S  x86.h
